# harness

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  clippy.toml  demo.sh
crates/actor/: Cargo.toml
crates/actor-cluster/: Cargo.toml
crates/actor-cluster/src/: consensus.rs  correlator.rs  lib.rs  membership.rs  placement.rs  protocol.rs  raft.rs  registry.rs  router.rs  singleton.rs  system.rs  transport.rs
crates/actor-core/: Cargo.toml
crates/actor-core/src/: actor.rs  context.rs  error.rs  event.rs  host.rs  id.rs  lib.rs  mailbox.rs  message.rs  rebind.rs  receptionist.rs  refs.rs  registry.rs  reply.rs  runtime.rs  supervision.rs  system.rs
crates/actor-core/tests/: conformance_compile_fail.rs
crates/actor-core/tests/compile_fail/: unhandled_ask.rs  unhandled_ask.stderr  unhandled_tell.rs  unhandled_tell.stderr
crates/actor-runtime/: Cargo.toml
crates/actor-runtime/examples/: cluster_tcp.rs  node.rs
crates/actor-runtime/src/: clock.rs  entropy.rs  lib.rs  spawner.rs  storage.rs  transport.rs  wire.rs
crates/actor-runtime/tests/: raft_persistence.rs  seam.rs  tcp_transport.rs  tls_handshake.rs  transport_invariants.rs
crates/actor-serialization/: Cargo.toml
crates/actor-serialization/src/: codec.rs  lib.rs
crates/actor-simulation/: Cargo.toml
crates/actor-simulation/examples/: greeter.rs
crates/actor-simulation/src/: catalogue.rs  check.rs  clock.rs  cluster_swarm.rs  coverage.rs  entropy.rs  executor.rs  faults.rs  invariant.rs  lib.rs  linearizability.rs  recorder.rs  registry.rs  replay.rs  transport.rs  workload.rs
crates/actor-simulation/tests/: actor.rs  cluster.rs  cluster_swarm.rs  conformance_catalogue.rs  conformance_deathwatch.rs  conformance_determinism.rs  conformance_faults.rs  conformance_join.rs  conformance_leader.rs  conformance_leader_storm.rs  conformance_lifecycle.rs  conformance_linearizability.rs  conformance_managed.rs  conformance_membership.rs  conformance_messaging.rs  conformance_misuse.rs  conformance_observability.rs  conformance_placement.rs  conformance_receptionist.rs  conformance_registry.rs  conformance_restart.rs  conformance_robustness.rs  conformance_router.rs  conformance_serialization.rs  conformance_singleton.rs  conformance_static.rs  conformance_supervision.rs  conformance_swarm.rs  determinism.rs  escalation.rs  failure.rs  fault_coverage.rs  gossip.rs  linearizable_register.rs  observability.rs  receptionist.rs  reproducibility.rs  supervision.rs  swarm.rs  watch.rs  (+1 more)
crates/actor/src/: lib.rs
crates/blob-store/: Cargo.toml
crates/blob-store/src/: blob.rs  cluster.rs  event.rs  lib.rs  local.rs  placement.rs  reconcile.rs  replica.rs  system.rs  tombstone.rs
crates/blob-store/tests/: adversarial.rs  clustered.rs  reconcile.rs  swarm.rs
crates/granary/: Cargo.toml
crates/granary/src/: alarm.rs  alarm_index.rs  blobs.rs  config.rs  disk.rs  election.rs  error.rs  event.rs  facet.rs  facet_blobs.rs  file_store.rs  gateway.rs  grain.rs  grainref.rs  host.rs  journal.rs  kv.rs  lib.rs  memory.rs  replica_store.rs  replicator.rs  shard.rs  shardmap.rs  sql.rs  store.rs  subscription.rs  system.rs  workflow.rs  ws.rs
crates/granary/src/fs/: chunk.rs  facet.rs  (+5 more)
crates/granary/tests/: alarm.rs  alarm_cluster.rs  alarm_index.rs  blob_swarm.rs  blobs.rs  client_routing.rs  clustered_grains.rs  compile_fail.rs  disk_local.rs  disk_swarm.rs  facets.rs  fs_clustered.rs  fs_local.rs  fs_swarm.rs  grain_swarm.rs  grains.rs  partition_safety.rs  raft_journal.rs  requires_consensus.rs  roundtrip.rs  shard_split.rs  sql.rs  sql_swarm.rs  subscription_faults.rs  workflow.rs  ws_clustered.rs  ws_local.rs  ws_swarm.rs
crates/harness/: Cargo.toml
crates/harness-anthropic/: Cargo.toml
crates/harness-anthropic/src/: lib.rs
crates/harness-core/: Cargo.toml
crates/harness-core/src/: lib.rs
crates/harness-gateway/: Cargo.toml
crates/harness-gateway/src/: auth.rs  cluster.rs  error.rs  http.rs  lib.rs  main.rs
crates/harness-gateway/tests/: gateway.rs
crates/harness-sandbox/: Cargo.toml
crates/harness-sandbox/modules/: README.md  qjs.wasm
crates/harness-sandbox/src/: compute.rs  durable.rs  firecracker.rs  ids.rs  lib.rs  materialize.rs  materialized.rs  native.rs  provider.rs  workspace.rs
crates/harness-sandbox/tests/: compute.rs  conformance_catalogue.rs  durable.rs  firecracker.rs  materialized.rs  native.rs  quickjs.rs  workspace.rs
crates/harness-standalone/: Cargo.toml  smoke.sh
crates/harness-standalone/src/: acp.rs  http.rs  ids.rs  journal.rs  lib.rs  main.rs  node.rs  proto.rs  repl.rs  sandbox.rs
crates/harness-standalone/tests/: acp_conformance.rs  acp_sdk.rs
crates/harness-tui/: Cargo.toml
crates/harness-tui/src/: app.rs  client.rs  main.rs  ui.rs
crates/harness/src/: agent.rs  budget.rs  client.rs  event.rs  host.rs  journal.rs  kind.rs  lib.rs  model.rs  sandbox.rs  session.rs  tool.rs
crates/harness/tests/: cluster.rs  conformance_budget.rs  conformance_cancel.rs  conformance_catalogue.rs  conformance_fence.rs  conformance_races.rs  conformance_resume.rs  conformance_run.rs  conformance_sandbox.rs  reproducibility.rs  smoke.rs
crates/machine/: Cargo.toml
crates/machine-frontdoor/: Cargo.toml
crates/machine-frontdoor/src/: bridge.rs  lib.rs  proto.rs  ssh.rs
crates/machine-frontdoor/tests/: loopback.rs
crates/machine-proto/: Cargo.toml
crates/machine-proto/src/: lib.rs
crates/machine/src/: grain.rs  lib.rs  net.rs  vm.rs
crates/machine/tests/: firecracker_e2e.rs  machine_conformance.rs  machine_sim.rs  machine_swarm.rs
crates/microvm/: Cargo.toml
crates/microvm/src/: lib.rs  vsock.rs  ws_sync.rs
crates/tenancy/: Cargo.toml
crates/tenancy/src/: lib.rs
crates/tenancy/tests/: directory.rs
crates/wal/: Cargo.toml
crates/wal/src/: lib.rs
guest/fc-agent/: .gitignore  Cargo.toml
guest/fc-agent/src/: main.rs
guest/fc-agent/tests/: uds.rs
guest/machine-agent/: Cargo.toml
guest/machine-agent/src/: main.rs  proto.rs  tar_sync.rs
guest/qjs-runner/: Cargo.toml  README.md  build.sh
guest/qjs-runner/src/: lib.rs  prelude.js
(+60 files in other folders)
