[workspace]
resolver = "3"
members = ["crates/*"]

# Shared metadata inherited by member crates via `field.workspace = true`.
[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["bchapuis <bchapuis@gmail.com>"]
repository = "https://github.com/bchapuis/harness"
rust-version = "1.85"

# Centralized dependency versions. Member crates opt in with
# `some-dep.workspace = true`, keeping versions consistent across the workspace.
[workspace.dependencies]
# Internal crates (Appendix B layout of the distributed actor spec).
actor = { path = "crates/actor", version = "0.1.0" }
actor-core = { path = "crates/actor-core", version = "0.1.0" }
actor-serialization = { path = "crates/actor-serialization", version = "0.1.0" }
actor-cluster = { path = "crates/actor-cluster", version = "0.1.0" }
actor-simulation = { path = "crates/actor-simulation", version = "0.1.0" }
actor-runtime = { path = "crates/actor-runtime", version = "0.1.0" }

# The agentic harness (Appendix B layout of the agentic harness spec).
harness = { path = "crates/harness", version = "0.1.0" }
harness-anthropic = { path = "crates/harness-anthropic", version = "0.1.0" }
harness-sandbox = { path = "crates/harness-sandbox", version = "0.1.0" }

# Third-party. The runtime seam (Clock/Entropy/Spawner) and mailbox are built
# on these; our own crates remain `unsafe`-free.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
erased-serde = "0.4"
futures = "0.3"
async-channel = "2"
rand = "0.8"
rand_chacha = "0.3"

# Production runtime (the `actor-runtime` crate only): a tokio-backed seam and a
# mutual-TLS TCP transport. Kept out of the runtime-agnostic core/cluster crates.
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "io-util", "macros", "sync"] }
getrandom = "0.2"
rustls = "0.23"
tokio-rustls = "0.26"
rcgen = "0.13"
# Standalone deployment only (`harness-standalone`): trust anchors for the
# rustls connection its HttpPost seam opens to the Anthropic API.
webpki-roots = "1"

# Tiered sandbox provider (`harness-sandbox`) only: the capability-handle
# filesystem of sandbox spec §3.1 and the compute engine of §3.2 — the
# reference realization's product choices (sandbox spec §3.5).
cap-std = "3"
wasmtime = { version = "33", default-features = false, features = ["runtime", "cranelift"] }

# Dev-only: compile-fail tests asserting invalid `ask`/`tell` is rejected at
# compile time (spec §18.5 #20, §18.6).
trybuild = "1"
# Dev-only: scratch directories for the file-based Raft storage tests.
tempfile = "3"
# Dev-only: compile WebAssembly text fixtures for the compute-tier tests.
wat = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
