[workspace]
resolver = "3"
members = ["crates/*"]

# Shared metadata inherited by member crates via `field.workspace = true`.
[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["bchapuis <bchapuis@gmail.com>"]
repository = "https://github.com/bchapuis/harness"
# edition 2024 needs 1.85, but the tree uses let-chains (stable in 1.88).
rust-version = "1.88"

# Centralized dependency versions. Member crates opt in with
# `some-dep.workspace = true`, keeping versions consistent across the workspace.
[workspace.dependencies]
# Internal crates (Appendix B layout of the distributed actor spec).
actor = { path = "crates/actor", version = "0.1.0" }
actor-core = { path = "crates/actor-core", version = "0.1.0" }
actor-serialization = { path = "crates/actor-serialization", version = "0.1.0" }
actor-cluster = { path = "crates/actor-cluster", version = "0.1.0" }
actor-simulation = { path = "crates/actor-simulation", version = "0.1.0" }
actor-runtime = { path = "crates/actor-runtime", version = "0.1.0" }

# A generic, framed, checksummed write-ahead log — the shared substrate behind the
# file-backed Raft WAL and grain store.
wal = { path = "crates/wal", version = "0.1.0" }

# Granary: durable objects ("grains") built on the actor framework (granary spec).
granary = { path = "crates/granary", version = "0.1.0" }

# Blob store: a namespaced, content-addressed object store on the actor framework,
# beside granary (blob-store spec).
blob-store = { path = "crates/blob-store", version = "0.1.0" }

# Tenancy: an ownership-index grain layered on granary, so principals own and
# enumerate their grains without granary itself becoming tenant-aware.
tenancy = { path = "crates/tenancy", version = "0.1.0" }

# The agentic harness (Appendix B layout of the agentic harness spec).
harness = { path = "crates/harness", version = "0.1.0" }
harness-anthropic = { path = "crates/harness-anthropic", version = "0.1.0" }
harness-openai = { path = "crates/harness-openai", version = "0.1.0" }
harness-sandbox = { path = "crates/harness-sandbox", version = "0.1.0" }

# Third-party. The runtime seam (Clock/Entropy/Spawner) and mailbox are built
# on these; our own crates remain `unsafe`-free.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Compact, serde-based binary format for the durable WAL/op-log record payloads
# (the file-backed Raft WAL and grain store): varint-framed, no field names, so a
# grain's opaque record bytes stay byte-for-byte instead of bloating to a JSON
# number array. The framing/checksum around each record is still our own.
postcard = { version = "1", features = ["use-std"] }
erased-serde = "0.4"
futures = "0.3"
async-channel = "2"
# Content-addressed blob ids (blob-store spec §2): BLAKE3 hashes faster than
# SHA-256 (SIMD) — every `get` re-hashes to verify — and is internally a Merkle
# tree whose root is the id, the structure range-verified streaming will reuse.
blake3 = "1"
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled", "hooks"] }
rand = "0.8"
rand_chacha = "0.3"

# Production runtime (the `actor-runtime` crate only): a tokio-backed seam and a
# mutual-TLS TCP transport. Kept out of the runtime-agnostic core/cluster crates.
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "io-util", "macros", "sync"] }
getrandom = "0.2"
rustls = "0.23"
tokio-rustls = "0.26"
rcgen = "0.13"
# The HTTP/SSE gateway (`harness-gateway`) only: the public multi-tenant edge.
axum = "0.8"
# The terminal client (`harness-tui`) only: a full-screen ratatui frontend over
# crossterm, with crossterm's async `EventStream` so input multiplexes with the
# gateway's SSE record stream in one `tokio::select!`.
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
# Standalone deployment only (`harness-standalone`): trust anchors for the
# rustls connection its HttpPost seam opens to the Anthropic API.
webpki-roots = "1"

# Tiered sandbox provider (`harness-sandbox`) only: the capability-handle
# filesystem of sandbox spec §3.1 and the compute engine of §3.2 — the
# reference realization's product choices (sandbox spec §3.5).
cap-std = "3"
wasmtime = { version = "33", default-features = false, features = ["runtime", "cranelift"] }
# Firecracker Native tier (`harness-sandbox`, feature `firecracker`) only: the
# tar stream that carries the workspace over vsock (mirrored by
# `guest/fc-agent`, which pins the same version).
tar = "0.4"
# Native tier (`harness-sandbox`, feature `native`) only: uid/gid without
# `unsafe` in our own crates (rustix is already in the graph via cap-std).
rustix = { version = "1", features = ["process"] }

# Dev-only: compile-fail tests asserting invalid `ask`/`tell` is rejected at
# compile time (spec §18.5 #20, §18.6).
trybuild = "1"
# Dev-only: scratch directories for the file-based Raft storage tests.
tempfile = "3"
# Dev-only: compile WebAssembly text fixtures for the compute-tier tests.
wat = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
