[workspace]
resolver = "3"
members = ["crates/*"]

# Shared metadata inherited by member crates via `field.workspace = true`.
[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["bchapuis <bchapuis@gmail.com>"]
repository = "https://github.com/bchapuis/harness"
# edition 2024 needs 1.85, but the tree uses let-chains (stable in 1.88).
rust-version = "1.88"

# Centralized dependency versions. Member crates opt in with
# `some-dep.workspace = true`, keeping versions consistent across the workspace.
[workspace.dependencies]
# Internal crates (Appendix B layout of the distributed actor spec).
actor-core = { path = "crates/actor-core", version = "0.1.0" }
actor-serialization = { path = "crates/actor-serialization", version = "0.1.0" }
actor-cluster = { path = "crates/actor-cluster", version = "0.1.0" }
actor-simulation = { path = "crates/actor-simulation", version = "0.1.0" }
actor-runtime = { path = "crates/actor-runtime", version = "0.1.0" }

# A generic, framed, checksummed write-ahead log — the shared substrate behind the
# file-backed Raft WAL and grain store.
wal = { path = "crates/wal", version = "0.1.0" }

# Granary: durable objects ("grains") built on the actor framework (granary spec).
granary = { path = "crates/granary", version = "0.1.0" }

# Blob store: a namespaced, content-addressed object store on the actor
# framework, beside granary (blob-store spec). A standalone product with no
# in-tree consumer yet — granary's colocated blobs (§7.10) serve the live path.
blob-store = { path = "crates/blob-store", version = "0.1.0" }

# Tenancy: an ownership-index grain layered on granary, so principals own and
# enumerate their grains without granary itself becoming tenant-aware.
tenancy = { path = "crates/tenancy", version = "0.1.0" }

# Persistent machines: a durable lightweight VM as a grain (machine spec).
machine = { path = "crates/machine", version = "0.1.0" }

# The machine guest-agent channel protocol (machine spec §5.1): one definition
# of the channel kinds, frame grammar, and caps, consumed by machine,
# machine-frontdoor, and guest/machine-agent (as a path dependency).
machine-proto = { path = "crates/machine-proto", version = "0.1.0" }

# Shared Firecracker microVM plumbing (config document, process lifecycle,
# vsock transport, API-socket pause/resume), used by harness-sandbox's
# firecracker tier and the machine's VM binding.
microvm = { path = "crates/microvm", version = "0.1.0" }

# The agentic harness (Appendix B layout of the agentic harness spec).
harness = { path = "crates/harness", version = "0.1.0" }
harness-anthropic = { path = "crates/harness-anthropic", version = "0.1.0" }
harness-openai = { path = "crates/harness-openai", version = "0.1.0" }
harness-sandbox = { path = "crates/harness-sandbox", version = "0.1.0" }

# Third-party. The runtime seam (Clock/Entropy/Spawner) and mailbox are built
# on these; our own crates remain `unsafe`-free.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Compact, serde-based binary format for the durable WAL/op-log record payloads
# (the file-backed Raft WAL and grain store): varint-framed, no field names, so a
# grain's opaque record bytes stay byte-for-byte instead of bloating to a JSON
# number array. The framing/checksum around each record is still our own.
postcard = { version = "1", features = ["use-std"] }
erased-serde = "0.4"
futures = "0.3"
async-channel = "2"
# Content-addressed blob ids (blob-store spec §2): BLAKE3 hashes faster than
# SHA-256 (SIMD) — every `get` re-hashes to verify — and is internally a Merkle
# tree whose root is the id, the structure range-verified streaming will reuse.
blake3 = "1"
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled", "hooks"] }
rand = "0.8"
rand_chacha = "0.3"

# The tokio-backed deployment layer: actor-runtime's production seam, the
# gateway, standalone, the tui, the sandbox tiers, and the machine's VM
# binding. Kept out of the runtime-agnostic core/cluster crates.
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "io-util", "macros", "sync"] }
getrandom = "0.2"
# Mutual-TLS TCP transport (`actor-runtime`), plus the TLS client side of
# `harness-standalone`'s HttpPost seam and `harness-tui`'s gateway connection.
rustls = "0.23"
tokio-rustls = "0.26"
rcgen = "0.13"
# The HTTP/SSE gateway (`harness-gateway`) only: the public multi-tenant edge.
axum = "0.8"
# Byte buffers for russh's channel data (`machine-frontdoor`).
bytes = "1"
# The machine front door (`machine-frontdoor`) only: a pure-Rust SSH server, so
# the front door terminates SSH in-process against journaled keys and presents
# each machine's own host key (machine spec §5.1).
russh = "0.62"
# The terminal client (`harness-tui`) only: a full-screen ratatui frontend over
# crossterm, with crossterm's async `EventStream` so input multiplexes with the
# gateway's SSE record stream in one `tokio::select!`.
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
# Trust anchors for the outbound rustls connections (`harness-standalone`'s
# HttpPost seam to the Anthropic API, `harness-tui`'s gateway connection).
webpki-roots = "1"

# The capability-handle filesystem of sandbox spec §3.1, held by
# `harness-sandbox`, `machine`, and `microvm`'s workspace codec.
cap-std = "3"
# Compute engine of sandbox spec §3.2 (`harness-sandbox` only) — the
# reference realization's product choice (sandbox spec §3.5).
wasmtime = { version = "33", default-features = false, features = ["runtime", "cranelift"] }
# The tar stream that carries a workspace over vsock (`microvm`'s ws codec,
# feature `ws`; mirrored by the guest agents, which pin the same major).
tar = "0.4"
# Native tier (`harness-sandbox`, feature `native`) only: uid/gid without
# `unsafe` in our own crates (rustix is already in the graph via cap-std).
rustix = { version = "1", features = ["process"] }

# Dev-only: request assembly for the gateway's in-process axum tests.
tower = "0.5"
# Dev-only: compile-fail tests asserting invalid `ask`/`tell` is rejected at
# compile time (spec §18.5 #20, §18.6).
trybuild = "1"
# Dev-only: scratch directories for the file-based Raft storage tests.
tempfile = "3"
# Dev-only: compile WebAssembly text fixtures for the compute-tier tests.
wat = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
