[package]
name = "actor-cluster"
description = "Cluster runtime: transport boundary and the networked ActorSystem (spec §7–§13)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
actor-core.workspace = true
actor-serialization.workspace = true
async-channel.workspace = true
futures.workspace = true
serde.workspace = true
