[package]
name = "actor-core"
description = "Core actor abstractions, runtime seam, and the single-node LocalSystem (spec §3, §4, §14)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
actor-serialization.workspace = true
serde = { workspace = true }
futures.workspace = true
async-channel.workspace = true
