[package]
name = "granary"
description = "Durable objects (\"grains\"): virtual, durable, single-activation actors with colocated event-sourced storage (granary spec)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
actor-core.workspace = true
actor-cluster.workspace = true
actor-serialization.workspace = true
wal.workspace = true
blake3.workspace = true
serde = { workspace = true }
serde_json.workspace = true
postcard.workspace = true
futures.workspace = true
async-channel.workspace = true
rusqlite = { workspace = true, optional = true }

[dev-dependencies]
actor-simulation.workspace = true
trybuild.workspace = true
tempfile.workspace = true

[features]
# The SQL facet (spec §7.14): a private on-disk SQLite database per grain.
# Off by default to keep the base crate free of the bundled C dependency.
sql = ["dep:rusqlite"]
