[package]
name = "harness-anthropic"
description = "Production Model seam for the agentic harness: the Anthropic Messages API client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
actor-core.workspace = true
harness.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true

[dev-dependencies]
actor-simulation.workspace = true

[lints]
workspace = true
