[package]
name = "harness-core"
description = "Core library for the harness workspace."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
harness-utils.workspace = true
