[package]
name = "harness-sandbox"
description = "Tiered sandbox provider: workspace tier by capability handle (cap-std), compute tier by wasmtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["workspace"]
# The Workspace tier (sandbox spec §3.1): typed tools over a cap-std `Dir`.
workspace = ["dep:cap-std"]
# The Compute tier (sandbox spec §3.2): hermetic wasmtime guests over the
# workspace — a guest sees the §3.1 filesystem and nothing else, so the
# feature implies `workspace`.
compute = ["workspace", "dep:wasmtime"]
# The QuickJS scripting surface (`run_js`): embeds the committed runner
# artifact (guest/qjs-runner, built by its build.sh). Requires
# crates/harness-sandbox/modules/qjs.wasm to be present, so it does not build
# from a fresh checkout until that artifact is built and committed.
quickjs = ["compute"]
# The Native tier (sandbox spec §3.4, the development fallback of §3.5): OS
# processes inside an OCI container driven through the `docker` CLI. The
# container sees the §3.1 workspace as a bind mount, so the feature implies
# `workspace`.
native = ["workspace", "dep:tokio", "dep:rustix"]
# The Native tier at the microVM grade (sandbox spec §3.4's stronger grade,
# §3.5's reference choice): OS processes inside a Firecracker microVM, the
# workspace carried in and out as a tar stream over vsock. Linux + /dev/kvm
# only at runtime; the code builds everywhere. Implies `native` (the docker
# fallback shares the provider's Native routing and refusal conduct). The VM
# lifecycle, vsock transport, and workspace tar codec live in the shared
# `microvm` crate.
firecracker = ["native", "dep:microvm", "microvm/ws", "tokio/fs"]

[dependencies]
actor-core.workspace = true
harness.workspace = true
serde.workspace = true
serde_json.workspace = true
cap-std = { workspace = true, optional = true }
wasmtime = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["process"] }
microvm = { workspace = true, optional = true }

# uid/gid for the container's `--user` (unix-only API; the call site is
# `#[cfg(unix)]`).
[target.'cfg(unix)'.dependencies]
rustix = { workspace = true, optional = true }

[dev-dependencies]
actor-simulation.workspace = true
granary.workspace = true
futures.workspace = true
tempfile.workspace = true
wat.workspace = true
tokio = { workspace = true, features = ["process"] }
# The firecracker suite's fake guest packs and unpacks tars itself, as the
# real guest agent does — deliberately independent of the host-side codec.
tar.workspace = true

[lints]
workspace = true
