[package]
name = "harness-standalone"
description = "A standalone multi-process deployment of the agentic harness: TCP nodes, a shared file journal, the Anthropic model, and a REPL"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
actor-core.workspace = true
actor-cluster.workspace = true
actor-runtime.workspace = true
actor-serialization.workspace = true
harness.workspace = true
harness-anthropic.workspace = true
harness-sandbox = { workspace = true, features = ["native"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-std", "process", "fs"] }
rustls.workspace = true
tokio-rustls.workspace = true
webpki-roots.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
