[package]
name = "microvm"
description = "Shared Firecracker microVM plumbing: config document, process lifecycle, vsock transport, API-socket pause/resume (sandbox spec §3.5, machine spec §2.1)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
# The workspace tar codec (`ws_sync`): the capped, capability-confined
# pack/unpack shared by the sandbox's per-call sync and the machine's
# workspace facet. Off by default to keep the core crate two-dependency.
ws = ["dep:tar", "dep:cap-std"]

[dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["process", "net", "io-util", "time", "fs"] }
tar = { workspace = true, optional = true }
cap-std = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros"] }
