[package]
name = "tenancy"
description = "An ownership-index grain: principals own and enumerate their grains, layered on granary"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
granary.workspace = true
actor-core.workspace = true
serde.workspace = true

[dev-dependencies]
actor-simulation.workspace = true

[lints]
workspace = true
