[package]
name = "wal"
description = "A generic, framed, checksummed write-ahead log primitive: append, truncate, compact, and torn-tail recovery — the shared substrate behind the file-backed Raft WAL and grain store."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
postcard.workspace = true

[dev-dependencies]
serde = { workspace = true }
tempfile.workspace = true
